fix: version bump

--- a/blog/2025-05-26-ai-deployment-operational-oversight.mdx
+++ b/blog/2025-05-26-ai-deployment-operational-oversight.mdx
@@ -13,6 +13,8 @@ In every enterprise, AI adoption starts with pilots. But scaling requires more t
 
 This is hard. And that's probably why 95% of GenAI projects never reach production!
 
+<!-- truncate -->
+
 Mastering AI is not about writing fancy prompts. It's about reshaping your organization to work better with this new resource. This takes time, a lot of trial and error and dedication.
 
 We are building Supervaize Studio to help organisations of all sizes get better at adopting AI.
