feat: integrate @docusaurus/theme-mermaid and update documentation structure
- Enabled Mermaid support in markdown configuration for enhanced diagram rendering.
- Added @docusaurus/theme-mermaid to docusaurus.config.ts and package.json for improved visual documentation.
- Updated version to 0.2.0 in package-lock.json and package.json.
- Introduced new "Core Concepts" section in sidebars and linked it in relevant documentation files for better navigation.
- Corrected GitHub repository links in multiple documentation files to point to the official Supervaize repository.

--- a/docs/supervaizer-controller/application-flow-control.mdx
+++ b/docs/supervaizer-controller/application-flow-control.mdx
@@ -10,6 +10,10 @@ import "bootstrap-icons/font/bootstrap-icons.css";
 
 This guide explains how to manage application flow and track progress using the `Case` class and related objects in your Supervaizer agent.
 
+:::tip Mental model
+For the core concepts (Job, Case, Step) and how Supervaize relates to execution engines like n8n, see [Core concepts](core-concepts).
+:::
+
 ## Overview
 
 :::info
